--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-{{ title }}
-<br/>
-{{ name }}
-<br/>
-<input [(ngModel)]="name" name="name">
+<div class="container">
+  <app-course-list></app-course-list>
+</div>
