--- a/src/app/courses/course.list.component.html
+++ b/src/app/courses/course.list.component.html
@@ -1,1 +1,30 @@
 <h1>Course List</h1>
+
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>Image</th>
+      <th>Name</th>
+      <th>Price</th>
+      <th>Code</th>
+      <th>Release Date</th>
+      <th>Rating</th>
+      <th>Options</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let course of courses">
+      <td>{{ course.imageUrl }} </td>
+      <td>{{ course.name }} </td>
+      <td>{{ course.price }} </td>
+      <td>{{ course.code }} </td>
+      <td>{{ course.releaseDate }} </td>
+      <td>{{ course.rating }} </td>
+      <td> </td>
+
+
+    </tr>
+  </tbody>
+
+
+</table>
