--- a/src/app/courses/course.list.component.html
+++ b/src/app/courses/course.list.component.html
@@ -14,12 +14,15 @@
   </thead>
   <tbody>
     <tr *ngFor="let course of courses">
-      <td>{{ course.imageUrl }} </td>
+      <td><img [src]="course.imageUrl" width="40" height="40" > </td>
       <td>{{ course.name }} </td>
       <td>{{ course.price }} </td>
       <td>{{ course.code }} </td>
       <td>{{ course.releaseDate }} </td>
-      <td>{{ course.rating }} </td>
+      <td>
+
+        <app-star [rating]="course.rating"></app-star>
+       </td>
       <td> </td>
 
 
