--- a/src/app/star/star.component.html
+++ b/src/app/star/star.component.html
@@ -1,4 +1,4 @@
-<div [style.width.px]="starWidth" [title]="rating" >
+<div class="crop" [style.width.px]="starWidth" [title]="rating" >
   <div style="width: 100px;">
     <span class="fa fa-star"></span>
     <span class="fa fa-star"></span>
