--- a/src/app/courses/course.list.component.html
+++ b/src/app/courses/course.list.component.html
@@ -1,5 +1,13 @@
 <h1>Course List</h1>
 
+<div class="form-group row">
+  <label class="col-sm-2 col-form-label">
+    Filter by:
+  </label>
+  <div class="col-sm-10">
+    <input [(ngModel)]="filter" class="form-control">
+  </div>
+</div>
 <table class="table table-striped">
   <thead>
     <tr>
@@ -13,7 +21,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let course of courses">
+    <tr *ngFor="let course of filteredCourses">
       <td><img [src]="course.imageUrl" width="40" height="40" > </td>
       <td>{{ course.name }} </td>
       <td>{{ course.price }} </td>
