--- a/src/app/courses/course.list.component.html
+++ b/src/app/courses/course.list.component.html
@@ -25,8 +25,8 @@
       <td><img [src]="course.imageUrl" width="40" height="40" > </td>
       <td>{{ course.name }} </td>
       <td>{{ course.price }} </td>
-      <td>{{ course.code }} </td>
-      <td>{{ course.releaseDate }} </td>
+      <td>{{ course.code | lowercase | replace: '-': ' ' }}</td>
+      <td>{{ course.releaseDate  | date: 'dd/MM/yyyy'}} </td>
       <td>
 
         <app-star [rating]="course.rating"></app-star>
